# pytmatrix-lte

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: performance.md
.github/workflows/: release_to_pypi.yml  tests.yml  tests_windows.yml
ci/: environment.yml  environment_latest.yml
pytmatrix/: __init__.py  orientation.py  psd.py  quadrature.py  radar.py  refractive.py  scatter.py  tmatrix.py  tmatrix_aux.py
pytmatrix/fortran_tm/: __init__.py
pytmatrix/tests/: __init__.py  test_tmatrix.py
