[build-system]
requires = [
  "meson>=1.2",
  "meson-python>=0.19.0",
  "numpy>=2.0.0",
]
build-backend = "mesonpy"

[project]
name = "pytmatrix"
description = "T-matrix scattering computations"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]


classifiers = [
	"Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Operating System :: Unix",
    "Operating System :: Microsoft",
    "Operating System :: MacOS",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
authors = [
  { name = "Jussi Leinonen", email = "jsleinonen@gmail.com" }
]
dynamic = ['version']


requires-python = ">=3.11"
dependencies = ["numpy", "scipy", "pytest"]


[project.optional-dependencies]
dev = [
	"pre-commit",
	"setuptools",
	"build",
	"twine",
]


[project.urls]
Source = 'https://github.com/jleinonen/pytmatrix'
Documentation = "https://github.com/jleinonen/pytmatrix/wiki"
tracker = "https://github.com/jleinonen/pytmatrix/issues"
download = "https://github.com/jleinonen/pytmatrix/releases"
Homepage = 'https://github.com/jleinonen/pytmatrix'
Repository = 'https://github.com/jleinonen/pytmatrix'
Issues = "https://github.com/jleinonen/pytmatrix/issues"
Changelog = "https://github.com/jleinonen/pytmatrix/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["pytmatrix/tests"]
pythonpath = ["."]


[tool.black]
line-length = 120
preview = true

[tool.ruff]

line-length = 120
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "docs",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]

select = [
	# pydocstyle
    "D",
    # Pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-quotes
    "Q",
    # flake8-bugbear
    "B",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-raise
    "RSE",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # Perflint
    "PERF",
    # pandas-vet
    "PD",
    # pylint
    "PL",
    # flake8-commas
    "COM",
    # flake8-slots
    "SLOT",
    # flake8-comprehensions
    "C4",
    # Ruff custom rules
    "RUF"

    #---------------------
    #### Future rules ####
    # flake8-use-pathlib
    # "PTH",
    # NumPy-specific rules  (for 2.0)
    # "NPY",
    # refurb
    # "FURB", # require preview
]
ignore = [
    "E722",
    "PT011", # pytest raised error must be checked if match the expected error msg
    "PT030",
    "PERF203",
	"PLW2901",
    "B904",
	"RET504",
    #  "PD901",
    "RUF043",
    "PLC0415",
    "PLC0206",
    "PLW1641",
    "RUF059",

    # Docstyle Rules
    "D401", # First sentence must be in imperative mood

    # Complexity rules
    "PLR0913",
    "PLR2004",
    "PLR0912",
    "PLR0915",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.codespell]
ignore-words-list = "thet"
